tests/rt/neg/ifc/pini_full_wrong_lev.trp
let val a_ = attenuate (authority, {alice})
    val c = pinipushto (a_ , {bob}) 
    val _ = if (1 raisedTo {alice, bob}) then () else ()
    val c2 = pinipushto(a_, {})
    val _ = debugpc ()
    val _ = pinipop (c)
in debugpc ()
end